# easy-mint

./: Anchor.toml  README.md  ee.code-workspace  ezDcoZRhSG719yeYFvzTL5dXNCMsx8uVB4CnwCkjtvx.json  ezMY4T9fFpdqHTGXn36TA5RBSZRi4Dr7GBEP7AqSWPQ.json  package.json
migrations/: deploy.ts
programs/easy-mint/: Cargo.toml
programs/easy-mint/src/: error.rs  ix_accounts.rs  lib.rs  state.rs
tests/: easy-mint.ts
